dist_man1_MANS=

if BUILD_BITCOINPAYTHROUGHD
  dist_man1_MANS+=bitcoinpaythroughd.1
endif

if ENABLE_QT
  dist_man1_MANS+=bitcoinpaythrough-qt.1
endif

if BUILD_BITCOINPAYTHROUGH_CLI
  dist_man1_MANS+=bitcoinpaythrough-cli.1
endif

if BUILD_BITCOINPAYTHROUGH_TX
  dist_man1_MANS+=bitcoinpaythrough-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOINPAYTHROUGH_WALLET
  dist_man1_MANS+=bitcoinpaythrough-wallet.1
endif
endif
